# game

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  build.bat  game.aps
res/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: camera_controller.cpp  camera_controller.hpp  game.cpp  main.cpp  meshgen.cpp  terrain.cpp
src/game/: camera_controller.cpp  camera_controller.hpp  game.cpp  meshgen.cpp  meshgen.hpp  terrain.cpp  terrain.hpp
